# wpm

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_NOTICES.md  install.cmd  remove.cmd  setup.cmd
.github/actions/setup-tinycc/: action.yml
.github/workflows/: release.yml  test-reports.yml  xp-release.yml
cmake/: BuildSelfPackage.cmake  GenerateVersion.cmake  TinyCCArchiver.ps1  tcc-ar.cmd
cmake/toolchains/: tcc-x86-xp.cmake
docs/: adr-0001-package-trust-model-full.md  adr-0002-repository-trust-and-key-distribution-full.md  adr-0003-package-format-and-installation-semantics.md  adr-0004-dependency-resolution-and-version-constraints.md  adr-0005-repository-architecture-and-metadata-format.md  adr-0006-package-relationships-and-deployment-coordination.md  adr-0007-automated-test-strategy-and-verification-artifacts.md  compatibility-tracking.md  dfs.md  iso_iec_ieee29119-3_2021.tex  quality-testing.md  req-0001-cmd-line-invocation.md  req-0002-package-initialization.md  req-0003-package-build.md  req-0004-package-installation.md  req-0005-package-index-signature-verification.md  req-0006-package-metadata-archive-naming.md  req-0007-wpm-self-installation.md  req-0008-package-removal.md  req-0009-github-release-artifacts.md  req-0010-runtime-mode-detection.md  req-0011-https-repositories.md  req-0012-package-signing-and-validation.md  req-0013-version-aware-upgrades.md  roadmap-1.0.md  roadmap-2.0.md  support-policy.md  tc-0001-usage-version-check.tex  tc-0002-package-initialization.tex  tc-0003-package-archive-build.tex  tc-0004-package-archive-installation.tex  tc-0005-package-index-signature-verification.tex  tc-0006-package-metadata-archive-naming.tex  tc-0007-wpm-self-installation.tex  tc-0008-package-removal.tex  tc-0009-github-release-artifacts.tex  tc-0010-runtime-mode-detection.tex  tc-0011-https-repositories.tex  tc-0012-package-signing-and-validation.tex  tc-0013-version-aware-upgrades.tex  (+3 more)
release_keys/: wpm-release.public
tests/: check-dependency-releases.ps1  export-dependency-metadata.ps1  generate-test-report.ps1  lint-c99.ps1  smoke.ps1  summarize-build-warnings.ps1  tc-0001-usage-version-check.ps1  tc-0002-package-initialization.ps1  tc-0003-package-archive-build.ps1  tc-0004-package-archive-installation.ps1  tc-0005-package-index-signature-verification.ps1  tc-0006-package-metadata-archive-naming.ps1  tc-0007-wpm-self-installation.ps1  tc-0008-package-removal.ps1  tc-0009-github-release-artifacts.ps1  tc-0010-runtime-mode-detection.ps1  tc-0011-https-repositories.ps1  tc-0012-package-signing-and-validation.ps1  tc-0013-version-aware-upgrades.ps1  verify-test-evidence.ps1  verify-traceability.ps1  wpm-test-lib.ps1
wpm/: CMakeLists.txt  archive.c  archive.h  helpers.c  helpers.h  init.c  init.h  repository.c  repository.h  signing.c  signing.h  wpm.c  wpm.h
wpm/tcc_compat/: aclapi.h  advapi32.def  secure_crt.c  urlmon.def  urlmon.h  utime.c  version.def  xp_crt.c
